--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -48,7 +48,7 @@ Hãy thêm câu lệnh để tính tổng của 6 và 12, giống như ví dụ 
 *** =sct
 ```{r}
 test_output_contains("18", incorrect_msg = "Bạn cần thêm `6 + 12` trên một dòng lệnh mới. Đừng bắt đầu dòng lệnh với `#`, câu lệnh của bạn sẽ không được R xử lý đâu!")
-success_msg("Tuyệt vời! Bạn đã thấy kết quả của đoạn lệnh trên console chưa? Giờ thì bạn đã làm quen với trình duyệt, ta cùng học thêm về R nhé!")
+success_msg("Tuyệt vời! Bạn đã thấy kết quả của câu lệnh trên console chưa? Giờ thì bạn đã làm quen với trình duyệt, ta cùng học thêm về R nhé!")
 ```
 
 --- type:NormalExercise xp:100 skills:1 key:720745eda5
@@ -191,7 +191,7 @@ success_msg("Làm tốt lắm! Bạn có để ý thấy R không hiển thị g
 Giả dụ bạn có một cái làn hoa quả trong đó có 5 quả táo. Bạn muốn gán số lượng táo trong một biến tên là `my_apples`. 
 
 *** =instructions
-- Gõ đoạn lệnh sau đây vào trình soạn thảo: `my_apples <- 5`. `my_apples` sẽ được gán giá trị là 5.
+- Gõ câu lệnh sau đây vào trình soạn thảo: `my_apples <- 5`. `my_apples` sẽ được gán giá trị là 5.
 - Gõ: `my_apples` dưới chú thích thứ hai để hiển thị ra giá trị của `my_apples`.
 - Nhấn nút 'Submit Answer', và theo dõi trong console. Bạn sẽ thấy số 5 được hiển thị. Điều này chứng tỏ R đã gắn biến `my_apples` cho giá trị 5.
 
